force-app/main/default/objects/EYI_Payment_Receipt__c/EYI_Payment_Receipt__c.object-meta.xml
<CustomObject>
    <label>Bank Payment Receipt</label>
    <nameField>
        <displayFormat>PR-{0}</displayFormat>
        <label>Payment Receipt</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Payment Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>