force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_Account__c</fullName>
    <label>Account</label>
    <length>10</length>
    <type>Text</type>
</CustomField>