force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Account_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Account_Document_Number__c</fullName>
    <label>Account Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>