force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>EYI_Account_ID__c</fullName>
    <label>Account ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>