force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Account_Type__c</fullName>
    <label>Account Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>