force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>