force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Approved_Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>EYI_Approved_Total_Payments__c</fullName>
    <description>Calculate approved payments</description>
    <label>Approved Total Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>