force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Assignment__c.field-meta.xml
<CustomField>
    <fullName>EYI_Assignment__c</fullName>
    <label>Assignment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>