force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Attached_At__c.field-meta.xml
<CustomField>
    <fullName>EYI_Attached_At__c</fullName>
    <label>Attached At</label>
    <type>Time</type>
</CustomField>