force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Attached_By__c.field-meta.xml
<CustomField>
    <fullName>EYI_Attached_By__c</fullName>
    <label>Attached By</label>
    <length>12</length>
    <type>Text</type>
</CustomField>