force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Attached_On__c.field-meta.xml
<CustomField>
    <fullName>EYI_Attached_On__c</fullName>
    <label>Attached On</label>
    <type>Date</type>
</CustomField>