force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HDFC Bank Ltd</fullName>
            </value>
            <value>
                <fullName>ICICI Bank</fullName>
            </value>
            <value>
                <fullName>Kotak Bank</fullName>
            </value>
            <value>
                <fullName>State Bank of India</fullName>
            </value>
            <value>
                <fullName>Bank of India</fullName>
            </value>
            <value>
                <fullName>Yes Bank Ltd</fullName>
            </value>
            <value>
                <fullName>IDBI Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Maharashtra</fullName>
            </value>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>Allahabad Bank</fullName>
            </value>
            <value>
                <fullName>Andhra Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Bahrain and Kuwait</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda - Corporate Banking</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda - Retail Banking</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>Central Bank of India</fullName>
            </value>
            <value>
                <fullName>City Union Bank</fullName>
            </value>
            <value>
                <fullName>Corporation Bank</fullName>
            </value>
            <value>
                <fullName>Deutsche Bank</fullName>
            </value>
            <value>
                <fullName>Development Credit Bank</fullName>
            </value>
            <value>
                <fullName>Dhanlaxmi Bank</fullName>
            </value>
            <value>
                <fullName>Federal Bank</fullName>
            </value>
            <value>
                <fullName>Indian Bank</fullName>
            </value>
            <value>
                <fullName>Indian Overseas Bank</fullName>
            </value>
            <value>
                <fullName>IndusInd Bank</fullName>
            </value>
            <value>
                <fullName>ING Vysya Bank</fullName>
            </value>
            <value>
                <fullName>Jammu and Kashmir Bank</fullName>
            </value>
            <value>
                <fullName>Karnataka Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Karur Vysya Bank</fullName>
            </value>
            <value>
                <fullName>Laxmi Vilas Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>