force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Bank_Name_Details__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Name_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Name</label>
    <referenceTo>EYI_Bank_Details__c</referenceTo>
    <relationshipLabel>Bank Payment Receipts</relationshipLabel>
    <relationshipName>Bank_Payment_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>