force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Bank_Payment_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Payment_Confirmation_Date__c</fullName>
    <label>Bank Payment Confirmation Date</label>
    <type>Date</type>
</CustomField>