force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Business_Trans_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Business_Trans_Code__c</fullName>
    <label>Business Trans Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>