force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Category_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>EYI_Category_of_Funding__c</fullName>
    <label>Category of Funding</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Transaction_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Disbursement</fullName>
            </value>
            <value>
                <fullName>Own Contribution</fullName>
            </value>
            <value>
                <fullName>Stamp Duty Payment</fullName>
            </value>
            <value>
                <fullName>Foreign Remittance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>