force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Change_Remark__c.field-meta.xml
<CustomField>
    <fullName>EYI_Change_Remark__c</fullName>
    <label>Change Remark</label>
    <type>Date</type>
</CustomField>