force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Channel_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Channel_Date__c</fullName>
    <label>Challan Date</label>
    <type>Date</type>
</CustomField>