force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Check_number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Check_number__c</fullName>
    <label>Cheque/DD Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>