force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Cheque_Realization_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cheque_Realization_Date__c</fullName>
    <label>Cheque Realization Date</label>
    <type>Date</type>
</CustomField>