force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Cheque_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cheque_Status__c</fullName>
    <label>Cheque Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dishonoured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>