force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Currency_Key__c.field-meta.xml
<CustomField>
    <fullName>EYI_Currency_Key__c</fullName>
    <description>Field created to store currency iso code for SAP sync API</description>
    <label>Currency Key</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>