force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Customer_Code__c</fullName>
    <label>Customer Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>