force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Delay_WRT_Creation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Delay_WRT_Creation__c</fullName>
    <label>Delay WRT Creation</label>
    <length>3</length>
    <type>Text</type>
</CustomField>