force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Department_ID__c.field-meta.xml
<CustomField>
    <fullName>EYI_Department_ID__c</fullName>
    <label>Department ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>