force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Department_Name__c</fullName>
    <label>Department Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>