force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Description__c</fullName>
    <label>Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>