force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Disbursed_Amount__c</fullName>
    <label>Disbursed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>