force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Disbursed_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Disbursed_Date__c</fullName>
    <label>Disbursed Date</label>
    <type>Date</type>
</CustomField>