force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_DMS_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_DMS_Doc_No__c</fullName>
    <label>DMS Doc No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>