force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_DMS_Doc_Part__c.field-meta.xml
<CustomField>
    <fullName>EYI_DMS_Doc_Part__c</fullName>
    <label>DMS Doc Part</label>
    <length>3</length>
    <type>Text</type>
</CustomField>