force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Doc_Year__c.field-meta.xml
<CustomField>
    <fullName>EYI_Doc_Year__c</fullName>
    <label>Doc Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>