force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>EYI_Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>