force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_G_L_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_G_L_Account__c</fullName>
    <label>G/L Account</label>
    <length>10</length>
    <type>Text</type>
</CustomField>