force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Home_Loan__c.field-meta.xml
<CustomField>
    <fullName>EYI_Home_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Loan</label>
    <referenceTo>EYI_Home_Loan__c</referenceTo>
    <relationshipName>Payment_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>