force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_House_Bank__c.field-meta.xml
<CustomField>
    <fullName>EYI_House_Bank__c</fullName>
    <label>House Bank</label>
    <length>5</length>
    <type>Text</type>
</CustomField>