force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Initial_Remark__c.field-meta.xml
<CustomField>
    <fullName>EYI_Initial_Remark__c</fullName>
    <label>Initial Remark</label>
    <length>100</length>
    <type>Text</type>
</CustomField>