force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Is_Reversed__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Reversed__c</fullName>
    <label>Is Reversed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>