force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Is_Syc__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Syc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to validate if the record is synced with SAP</description>
    <label>Is sync?</label>
    <type>Checkbox</type>
</CustomField>