force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_IsOpportunityPresent__c.field-meta.xml
<CustomField>
    <fullName>EYI_IsOpportunityPresent__c</fullName>
    <formula>NOT(ISBLANK( EYI_Opportunity__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOpportunityPresent</label>
    <type>Checkbox</type>
</CustomField>