force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mode_of_Payment__c</fullName>
    <label>Mode of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEFT</fullName>
            </value>
            <value>
                <fullName>RTGS</fullName>
            </value>
            <value>
                <fullName>Card Swipe</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>PDC Cheque</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>IMPS</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Bank Deposit</fullName>
                <isActive>false</isActive>
                <label>Bank Deposit</label>
            </value>
            <value>
                <fullName>Debit/Credit Card</fullName>
                <isActive>false</isActive>
                <label>Debit/Credit Card</label>
            </value>
            <value>
                <fullName>Regular Cheque</fullName>
                <isActive>false</isActive>
                <label>Regular Cheque</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>