force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Non_Bankable_Payment__c.field-meta.xml
<CustomField>
    <fullName>EYI_Non_Bankable_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Bankable Payment?</label>
    <type>Checkbox</type>
</CustomField>