force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Payment_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>