force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity_Name__c</fullName>
    <formula>EYI_Opportunity__r.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>