force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Payment_Confirmed_Amount_From_SAP__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Confirmed_Amount_From_SAP__c</fullName>
    <label>Payment Confirmed Amount From SAP</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>