force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REJECT</fullName>
            </value>
            <value>
                <fullName>APPROVE</fullName>
            </value>
            <value>
                <fullName>SUBMITTED</fullName>
            </value>
            <value>
                <fullName>HOLD</fullName>
            </value>
            <value>
                <fullName>INPROCESS</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
                <isActive>false</isActive>
                <label>Bounced</label>
            </value>
            <value>
                <fullName>Cleared</fullName>
                <isActive>false</isActive>
                <label>Cleared</label>
            </value>
            <value>
                <fullName>IRRELEVANT</fullName>
                <isActive>false</isActive>
                <label>IRRELEVANT</label>
            </value>
            <value>
                <fullName>MAILSENT</fullName>
                <isActive>false</isActive>
                <label>MAILSENT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>