force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>