force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>EYI_Processed_By__c</fullName>
    <label>Processed By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>