force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Receivable_Desk_Document_Version__c.field-meta.xml
<CustomField>
    <fullName>EYI_Receivable_Desk_Document_Version__c</fullName>
    <label>Receivable_Desk Document Version</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>