force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Receivable_Desk_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Receivable_Desk_Tracking_Number__c</fullName>
    <label>Receivable Desk Tracking Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>