force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Received_From__c.field-meta.xml
<CustomField>
    <fullName>EYI_Received_From__c</fullName>
    <label>Received From</label>
    <length>200</length>
    <type>Text</type>
</CustomField>