force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Recv_Desk_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>EYI_Recv_Desk_Approved_By__c</fullName>
    <label>Recv Desk Approved By</label>
    <length>12</length>
    <type>Text</type>
</CustomField>