force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Recv_Desk_Approved_By_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Recv_Desk_Approved_By_Name__c</fullName>
    <label>Recv Desk Approved By Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>