force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Recv_Desk_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Recv_Desk_Approved_Date__c</fullName>
    <label>Recv Desk Approved Date</label>
    <type>Date</type>
</CustomField>