force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Recv_Desk_Changed_Time__c.field-meta.xml
<CustomField>
    <fullName>EYI_Recv_Desk_Changed_Time__c</fullName>
    <label>Recv Desk Changed Time</label>
    <type>Time</type>
</CustomField>