force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Recv_Desk_Created_By__c.field-meta.xml
<CustomField>
    <fullName>EYI_Recv_Desk_Created_By__c</fullName>
    <label>Recv Desk Created By</label>
    <length>12</length>
    <type>Text</type>
</CustomField>