force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Reference__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reference__c</fullName>
    <label>Reference</label>
    <length>16</length>
    <type>Text</type>
</CustomField>