force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Reject_or_Approve_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reject_or_Approve_Date__c</fullName>
    <formula>if(OR(ISPICKVAL( EYI_Payment_Status__c , &apos;APPROVE&apos;),ISPICKVAL( EYI_Payment_Status__c , &apos;REJECT&apos;)), TODAY(),null  )</formula>
    <label>Reject or Approve Date</label>
    <type>Date</type>
</CustomField>