force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EYI_Remarks__c</fullName>
    <label>Remarks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>