force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_RERA_Applicable__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Applicable__c</fullName>
    <label>RERA Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>