force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_SAP_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Customer_Name__c</fullName>
    <label>SAP Customer Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>