force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Customer_Number__c</fullName>
    <label>SAP Customer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>