force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_SAP_Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Customer_Reference_Number__c</fullName>
    <description>Field created for payment receipt post SAP Sync API</description>
    <displayFormat>CN-{0000}</displayFormat>
    <label>SAP Customer Reference Number</label>
    <type>AutoNumber</type>
</CustomField>