force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_SAP_Payment_Advice_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Payment_Advice_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SAP Payment Advice Number</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>