force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_SAP_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Reason_Code__c</fullName>
    <label>SAP Reason Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>