force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_SAP_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Reason_Description__c</fullName>
    <label>SAP Reason Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>