force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_SAP_Rejection_Hold_Remark__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Rejection_Hold_Remark__c</fullName>
    <label>SAP Rejection/Hold Remark</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>