force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_SAP_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Sync_Date__c</fullName>
    <description>Capture SAP sync date.</description>
    <label>SAP Sync Date</label>
    <type>DateTime</type>
</CustomField>