force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_SAP_Transaction__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Transaction__c</fullName>
    <label>SAP Transaction</label>
    <length>4</length>
    <type>Text</type>
</CustomField>