force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Short_Key__c.field-meta.xml
<CustomField>
    <fullName>EYI_Short_Key__c</fullName>
    <label>Short Key</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>