force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Site__c.field-meta.xml
<CustomField>
    <fullName>EYI_Site__c</fullName>
    <label>Site</label>
    <length>3</length>
    <type>Text</type>
</CustomField>