force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Site_Name__c</fullName>
    <label>Site Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>