force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Statement_Date__c</fullName>
    <label>Statement Date</label>
    <type>Date</type>
</CustomField>