force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Statement_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Statement_Number__c</fullName>
    <label>Statement Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>