force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_TAT_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_TAT_Date__c</fullName>
    <description>It is used in Send notification to head.</description>
    <formula>EYI_SAP_Sync_Date__c  + VALUE( $Label.EYI_PaymentReceiptTAT )</formula>
    <label>TAT Date</label>
    <type>Date</type>
</CustomField>