force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax_Amount__c</fullName>
    <description>Field created for SAP sync API to store tax amount</description>
    <formula>EYI_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>